==================================
Rilascio v2.0.23    del 23/07/2017
==================================

Aggiunta la nuova libreria ryframe che contiene cornici e quadranti.

Migliorata la gestione dell'evento changed.

==================================
Rilascio v2.0.22    del 16/07/2017
==================================

ryText: corretto errore nella timerize.

==================================
Rilascio v2.0.21    del 16/07/2017
==================================

Rinnovata la gestione del pulsante Clear dei controlli: visibili sempre alla gotfocus.

Introdotto un periodo di latenza dei bottoni per evitare doppi invii.

ryText: migliorata la gestione di changed e temporize.

==================================
Rilascio v2.0.20    del 03/07/2017
==================================

Aggiunto una visualizzazione selezionabile e copiabile dei dati di maschera (ALT-W).

==================================
Rilascio v2.0.19    del 01/07/2017
==================================

ryList: corretto il fuoco al click.

ryText: corretta l'altezza.

Focus: diminuito il ritardo.

==================================
Rilascio v2.0.18    del 01/07/2017
==================================

Corretto in doppio engage dei rybutton su pressione da tastiera.

==================================
Rilascio v2.0.17    del 01/07/2017
==================================

Ego setup per applicazioni: reso compatibile con dispositivi mobili.

==================================
Rilascio v2.0.16    del 29/06/2017
==================================

ryTable: elenco per dispositivi mobili.
Postman: iniziata la versione per dispositivi mobili.

==================================
Rilascio v2.0.15    del 24/06/2017
==================================

Filibuster: aggiunto un padding nella versione mobile.

Aggiunte funzionalità per una futura versione adatta a dispositivi mobili.

WINZ: corrette anomalie sul richiamo di Pilota e Postman.

==================================
Rilascio v2.0.14    del 09/06/2017